src/objects/ITOP_Request__c.object
<CustomObject>
    <description>IT On Point request details listed with ticket</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>describe the problem briefly</description>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Time__c</fullName>
        <formula>Related_Secondary__r.Estimated_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Device_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Device Type</label>
        <referenceTo>ITOP_Device_Type__c</referenceTo>
        <relationshipLabel>ITOP Requests</relationshipLabel>
        <relationshipName>ITOP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related ITOP Device object by ID</description>
        <label>Related Device</label>
        <referenceTo>ITOP_Device__c</referenceTo>
        <relationshipLabel>ITOP Requests</relationshipLabel>
        <relationshipName>ITOP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Primary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Primary</label>
        <referenceTo>ITOP_Request_Primary_Option__c</referenceTo>
        <relationshipLabel>ITOP Requests</relationshipLabel>
        <relationshipName>ITOP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Secondary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Secondary</label>
        <referenceTo>ITOP_Request_Secondary_Option__c</referenceTo>
        <relationshipLabel>ITOP Requests</relationshipLabel>
        <relationshipName>ITOP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <formula>Related_Device_Type__r.Name + &apos; - &apos; + 
 Related_Primary__r.Name + &apos; - &apos; +
 Related_Secondary__r.Name</formula>
        <label>Summary</label>
        <type>Text</type>
    </fields>
    <label>ITOP Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>ITOP Claim Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ITOP Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>